other-cel/restrict-deprecated-registry/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dep-registry-ns
