other-cel/restrict-deprecated-registry/.chainsaw-test/podcontroller-good.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
  namespace: dep-registry-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      foo: bar
  template:
    metadata:
      labels:
        foo: bar
    spec:
      initContainers:
      - name: busybox-init
        image: ghcr.io/busybox:1.35
      - name: busybox-init-again
        image: registry.k8s.io/busybox:1.35
      containers:
      - name: busybox
        image: busybox:1.35
      - name: busybox02
        image: docker.io/busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
  namespace: dep-registry-ns
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: busybox-init
            image: ghcr.io/busybox:1.35
          - name: busybox-init-again
            image: registry.k8s.io/busybox:1.35
          containers:
          - name: busybox
            image: busybox:1.35
          - name: busybox02
            image: docker.io/busybox:1.35
